<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twutter</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="sample_text">SAMPLE ajlfkasj ;aj ;lsjfa;slkj]df jfsdakfjsldfjl jdsal kjdsla joise jlakdjfa pncasdlkfj alksdjf</string>
    <string name="sample_username">\@username</string>
    <string name="sample_displayname">Displayname</string>
    <string name="sample_time">60s</string>
    <string name="sample_fav_count">SAMPLE 213</string>
    <string name="sample_rt_count">SAMPLE 102</string>
    <string name="compose_header">Compose a Tweet</string>
    <string name="compose_sample">What do you have to say?</string>
    <string name="sample_charcount">0 / 280</string>
    <string name="description_compose_tweet">Compose Tweet</string>

</resources>