<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDisplayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/sample_displayname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/sample_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayname" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_username"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDisplayname"
        app:layout_constraintStart_toEndOf="@+id/tvDisplayname" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:maxLength="6"
        android:text="@string/sample_time"
        app:layout_constraintBottom_toBottomOf="@+id/tvDisplayname"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <ImageView
        android:id="@+id/ivRt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvText"
        app:layout_constraintTop_toBottomOf="@+id/tvText"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_retweet" />

    <TextView
        android:id="@+id/tvRtCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_rt_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/ivRt"
        app:layout_constraintTop_toTopOf="@+id/ivRt" />

    <ImageView
        android:id="@+id/ivFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvText"
        app:srcCompat="@drawable/ic_fav" />

    <TextView
        android:id="@+id/tvFavCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_fav_count"
        app:layout_constraintBottom_toBottomOf="@+id/ivFav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFav"
        app:layout_constraintTop_toTopOf="@+id/ivFav" />
</androidx.constraintlayout.widget.ConstraintLayout>